# co-zkvms

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.sh
co-jolt/: .gitignore  Cargo.toml  README.md
co-jolt/data/: cert0.der  cert1.der  cert2.der  cert_coordinator.der  key0.der  key1.der  key2.der  key_coordinator.der
co-jolt/examples/: config_coordinator.toml  config_party1.toml  config_party2.toml  config_party3.toml  rep3_jolt.rs  run_3_party.sh  run_3_party_jolt.sh  run_rv32i_instructions.sh  rv32i_instructions.rs  three_party.rs
co-jolt/examples/fibonacci/: Cargo.toml
co-jolt/examples/fibonacci/guest/: Cargo.toml
co-jolt/examples/fibonacci/src/: main.rs
co-jolt/examples/sha2-chain/: Cargo.toml
co-jolt/examples/sha2-chain/guest/: Cargo.toml
co-jolt/examples/sha3-chain/: Cargo.toml
co-jolt/examples/sha3-chain/guest/: Cargo.toml
co-jolt/examples/sha3-ex/: Cargo.toml
co-jolt/examples/sha3-ex/guest/: Cargo.toml
co-jolt/src/: field.rs  lib.rs  poly.rs  utils.rs
co-jolt/src/host/: analyze.rs  mod.rs
co-jolt/src/jolt/: mod.rs
co-jolt/src/jolt/instruction/: add.rs  and.rs  beq.rs  bge.rs  bgeu.rs  bne.rs  lb.rs  lh.rs  mod.rs  mul.rs  mulhu.rs  mulu.rs  or.rs  range_check.rs  sb.rs  sh.rs  sll.rs  slt.rs  sltu.rs  sra.rs  srl.rs  sub.rs  sw.rs  utils.rs  virtual_advice.rs  virtual_assert_halfword_alignment.rs  virtual_assert_lte.rs  virtual_assert_valid_div0.rs  virtual_assert_valid_signed_remainder.rs  virtual_assert_valid_unsigned_remainder.rs  virtual_move.rs  virtual_movsign.rs  virtual_pow2.rs  virtual_right_shift_padding.rs  xor.rs
co-jolt/src/jolt/subtable/: and.rs  eq.rs  eq_abs.rs  eq_msb.rs  gt_msb.rs  identity.rs  lt_abs.rs  ltu.rs  mod.rs  or.rs  range_check.rs  sign_extend.rs  sll.rs  sra_sign.rs  srl.rs  truncate_overflow.rs  xor.rs  zero_lsb.rs
co-jolt/src/jolt/trace/: rv.rs
co-jolt/src/jolt/vm/: bytecode.rs  instruction_lookups.rs  mod.rs  prover.rs  read_write_memory.rs  rv32i_vm.rs  timestamp_range_check.rs
co-jolt/src/lasso/memory_checking/: mod.rs  worker.rs
co-jolt/src/poly/: dense_interleaved_poly.rs  dense_mlpoly.rs  mixed_polynomial.rs  mod.rs  multilinear_polynomial.rs  opening_proof.rs  rep3_poly.rs  sparse_interleaved_poly.rs  spartan_interleaved_poly.rs  unipoly.rs
co-jolt/src/r1cs/: constraints.rs  inputs.rs  mod.rs  ops.rs  spartan.rs
co-jolt/src/subprotocols/: commitment.rs  grand_product.rs  mod.rs  sparse_grand_product.rs  sumcheck.rs  sumcheck_spartan.rs
co-jolt/src/utils/: element.rs  future.rs  instruction_utils.rs  shared_or_public.rs  transcript.rs
co-jolt/traces/: trace_coordinator_sha2-chain-100_32CPU.json  trace_coordinator_sha2-chain-100_96CPU.json  trace_coordinator_sha2-chain-1_32CPU.json  trace_coordinator_sha2-chain-300_32CPU.json  trace_party-0_sha2-chain-100_32CPU.json  trace_party-0_sha2-chain-100_8CPU.json  trace_party-0_sha2-chain-1_32CPU.json  trace_party-0_sha2-chain-300_32CPU.json  trace_party-1_sha2-chain-100_32CPU.json  trace_party-1_sha2-chain-100_8CPU.json  trace_party-1_sha2-chain-1_32CPU.json  trace_party-1_sha2-chain-300_32CPU.json  trace_party-2_sha2-chain-100_32CPU.json  trace_party-2_sha2-chain-100_8CPU.json  trace_party-2_sha2-chain-1_32CPU.json  trace_party-2_sha2-chain-300_32CPU.json
co-lasso/: Cargo.toml
co-lasso/data/: cert1.der  cert2.der
co-lasso/examples/: config_coordinator.toml  config_party3.toml  run_3_party.sh  three_party.rs
co-lasso/src/: coordinator.rs  grand_product.rs  lib.rs  main.rs  memory_checking.rs  poly.rs  sumcheck.rs  utils.rs  witness_solver.rs  worker.rs
co-lasso/src/instructions/: mod.rs  range_check.rs  utils.rs  xor.rs
co-lasso/src/lasso/: mod.rs  prover.rs
co-lasso/src/memory_checking/: coordinator.rs  mod.rs  worker.rs
co-lasso/src/poly/: dense_interleaved_poly.rs  mod.rs  multilinear_polynomial.rs  opening_proof.rs  rep3_poly.rs  sparse_interleaved_poly.rs
co-lasso/src/subprotocols/: commitment.rs  grand_product.rs  mod.rs  sparse_grand_product.rs  sumcheck.rs
co-lasso/src/subtables/: mod.rs  range_check.rs  xor.rs
co-noir-spartan/co-noir/: Cargo.toml
co-noir-spartan/noir-r1cs/: Cargo.toml  noir_proof_scheme.json
co-noir-spartan/noir-r1cs/src/: lib.rs  noir_to_r1cs.rs  noir_witness.rs  sparse_matrix.rs
co-noir-spartan/spartan/: Cargo.toml
co-noir-spartan/spartan/src/: logup.rs  math.rs  utils.rs  zk.rs
co-spartan/: Cargo.toml
co-spartan/examples/: single_prover.rs
co-spartan/src/: coordinator.rs  lib.rs  main.rs  setup.rs  sumcheck.rs  tests.rs  utils.rs  witness.rs  work.rs  worker.rs
co-spartan/src/cli/: main.rs  setup.rs  work.rs
co-spartan/src/mpc/: additive.rs  mod.rs  rep3.rs
co-spartan/src/network/: mod.rs  mpi.rs
dfs/: Cargo.toml
dfs/src/: errors.rs  lib.rs  logup.rs  math.rs  mpi_utils.rs  transcript.rs  utils.rs
dfs/src/co_spartan/: coordinator.rs  mod.rs  worker.rs
dfs/src/mpc/: ass.rs  mod.rs  rss.rs  utils.rs
dfs/src/mpc_snark/: coordinator.rs  worker.rs
dfs/src/mpi_snark/: coordinator.rs  worker.rs
dfs/src/network/: mod.rs
dfs/src/rep3_snark/: mod.rs
dfs/src/snark/: fixed_base.rs  indexer.rs  mod.rs  prover.rs  tests.rs  verifier.rs  zk.rs
dfs/src/subprotocols/: loglookup.rs  mod.rs
mpc-core/: Cargo.toml
mpc-core/src/: lib.rs  protocols.rs
mpc-core/src/protocols/: additive.rs  rep3.rs
mpc-net/: Cargo.toml
mpc-net/src/: channel.rs  config.rs  lib.rs  mpc_star.rs
mpc-net/src/rep3/: mod.rs  mpi.rs  network.rs
mpc-types/: Cargo.toml
mpc-types/src/: lib.rs  protocols.rs
noir-r1cs/: Cargo.toml
noir-r1cs/noir-examples/poseidon-rounds/: Prover.toml
noir-r1cs/src/: interner.rs  lib.rs  noir_proof_scheme.rs  noir_to_r1cs.rs  r1cs.rs  sparse_matrix.rs
noir-r1cs/src/cli/: measuring_alloc.rs  span_stats.rs
noir-r1cs/src/file/: counting_writer.rs  json.rs  mod.rs
noir-r1cs/src/utils/: mod.rs
snarks-core/: Cargo.toml
snarks-core/src/: field.rs  lib.rs  math.rs  transcript.rs
snarks-core/src/poly/: commitment.rs
spartan/: Cargo.toml
spartan/src/: indexer.rs  lib.rs  logup.rs  math.rs  r1cs.rs  transcript.rs  utils.rs  verifier.rs  zk.rs
(+74 files in other folders)
