[package]
name = "co-jolt"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
ark-linear-sumcheck.workspace = true
ark-crypto-primitives.workspace = true
ark-poly-commit.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-ec.workspace = true
rand.workspace = true
serde.workspace = true
itertools.workspace = true
clap.workspace = true
mimalloc.workspace = true
crossbeam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-forest.workspace = true
tracing-chrome.workspace = true
bytesize = "2.0.1"
color-eyre.workspace = true
num-bigint.workspace = true
fixedbitset = "0.5"
eyre.workspace = true
rand_chacha.workspace = true
once_cell = "1.20.0"
num_cpus = "1.16"
core_affinity = "0.5.1"

toml = "0.8"
paste = "1.0.15"
enum_dispatch = "0.3.12"
strum = "0.26.3"
strum_macros = "0.26.4"
futures = "0.3"
rustls = "0.23.15"
rayon = { version = "1.10.0", optional = true }
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
] }

# Jolt dependencies
bincode = "1.3.3"
jolt-core = { path = "../../jolt/jolt-core" }
jolt-common = { path = "../../jolt/common", package = "common" }
jolt-tracer = { path = "../../jolt/tracer", package = "tracer" }
postcard = { version = "1.0.8", default-features = false, features = [
    "use-std",
] }

mpc-core = { path = "../mpc-core" }
snarks-core = { path = "../snarks-core" }
mpc-net = { path = "../mpc-net" }


[build-dependencies]
jolt-common = { path = "../../jolt/common", package = "common" }

[features]
default = ["std", "parallel"]
std = [
    "ark-ff/std",
    "ark-poly/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-poly-commit/std",
]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-poly-commit/parallel",
    "rayon",
]
icicle = [
    "default",
    "dep:icicle-runtime",
    "dep:icicle-core",
    "dep:icicle-bn254",
    "jolt-core/icicle",
]
public-eq = []

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies]
icicle-core = { git = "https://github.com/ingonyama-zk/icicle-jolt.git", rev = "2441eba", optional = true }
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle-jolt.git", rev = "2441eba", optional = true }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle-jolt.git", rev = "2441eba", optional = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos")))'.dependencies]
icicle-core = { git = "https://github.com/ingonyama-zk/icicle-jolt.git", rev = "2441eba", optional = true }
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle-jolt.git", features = [
    # "cuda_backend",
], rev = "2441eba", optional = true }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle-jolt.git", features = [
    # "cuda_backend",
], rev = "2441eba", optional = true }
