[package]
name = "co-lasso"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
ark-linear-sumcheck.workspace = true
ark-crypto-primitives.workspace = true
ark-poly-commit.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-ec.workspace = true
rand.workspace = true
rayon = { version = "1.10.0", optional = true }
itertools.workspace = true
clap.workspace = true
mimalloc.workspace = true
crossbeam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-forest.workspace = true
bytesize = "2.0.1"
color-eyre.workspace = true
fixedbitset = "0.5"

jolt-core = { path = "../../examples/liblasso/jolt-core" }
mpc-core = { path = "../../examples/co-snarks/mpc-core" }

spartan = { path = "../spartan" }
co-spartan = { path = "../co-spartan" }
mpc-net = { path = "../mpc-net", package = "mpc-net-star" }

[features]
default = ["std", "parallel"]
std = [
    "ark-ff/std",
    "ark-poly/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-poly-commit/std",
]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-poly-commit/parallel",
    "rayon",
]
# mpi = ["mpc-net/mpi"]
