[package]
name = "co-spartan-noir"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "co-spartan"
path = "src/cli/main.rs"

[dependencies]
dfs = { path = "../dfs" }
noir-r1cs = { path = "../noir-r1cs" }

# Workspace dependencies
ark-linear-sumcheck.workspace = true
ark-poly-commit.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
# ark-bls12-381.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-ec.workspace = true
ark-crypto-primitives.workspace = true
rand.workspace = true
rayon = { version = "1.10.0", optional = true }
itertools.workspace = true
mpi.workspace = true
clap.workspace = true
mimalloc.workspace = true
crossbeam.workspace = true
merlin.workspace = true
blake2.workspace = true

[patch.crates-io]
ark-linear-sumcheck = { git = "https://github.com/huyuncong/sumcheck" }
ark-poly-commit = { git = "https://github.com/xjjj2/poly-commit" }

[features]
default = ["std", "parallel"]
std = [
    "ark-ff/std",
    "ark-poly/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-poly-commit/std",
]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-poly-commit/parallel",
    "rayon",
]
