[package]
name = "co-spartan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "co-spartan"
path = "src/cli/main.rs"

[dependencies]
# Workspace dependencies
ark-linear-sumcheck.workspace = true
ark-crypto-primitives.workspace = true
ark-poly-commit.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-ec.workspace = true
rand.workspace = true
rayon = { version = "1.10.0", optional = true }
itertools.workspace = true
clap.workspace = true
mimalloc.workspace = true
crossbeam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-forest.workspace = true
bytesize = "2.0.1"
color-eyre.workspace = true
num-bigint.workspace = true

spartan = { path = "../spartan" }
noir-r1cs = { path = "../noir-r1cs" }
mpc-net = { path = "../mpc-net" }

[features]
default = ["std", "parallel", "mpi"]
std = [
    "ark-ff/std",
    "ark-poly/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-poly-commit/std",
]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-poly-commit/parallel",
    "rayon",
]
mpi = ["mpc-net/mpi"]
