[package]
name = "dfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff.workspace = true
ark-linear-sumcheck.workspace = true
ark-poly.workspace = true
ark-poly-commit.workspace = true
ark-serialize.workspace = true
ark-ec.workspace = true
merlin.workspace = true
rand.workspace = true
blake2.workspace = true
ark-std = { workspace = true, features = ["parallel"] }
rayon = { version = "1", optional = true }
ark-crypto-primitives.workspace = true
mpi.workspace = true
clap.workspace = true
mimalloc.workspace = true
crossbeam.workspace = true
itertools.workspace = true


[dev-dependencies]
ark-bn254.workspace = true
rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-mnt4-298 = { version = "^0.4.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { version = "^0.4.0", default-features = false, features = ["r1cs"] }
ark-mnt4-753 = { version = "^0.4.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-753 = { version = "^0.4.0", default-features = false, features = ["r1cs"] }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true
panic = 'abort'

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[profile.dev]
opt-level = 0
panic = 'abort'

[features]
default = ["std", "parallel"]
std = [ "ark-ff/std", "ark-poly/std", "ark-std/std", "ark-serialize/std", "ark-poly-commit/std" ]
#print-trace = [ "ark-std/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-poly-commit/parallel", "rayon" ]





