[package]
name = "mpc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-ec.workspace = true
ark-linear-sumcheck.workspace = true
rand.workspace = true
itertools.workspace = true
eyre.workspace = true
rayon = { version = "1.10.0", optional = true }


mpc-types = { git = "https://github.com/nulltea/co-snarks" }
mpc-core = { git = "https://github.com/nulltea/co-snarks" }
mpc-net = { path = "../mpc-net" }

[features]
default = ["std", "parallel"]
std = ["ark-ff/std", "ark-poly/std", "ark-std/std", "ark-serialize/std"]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "rayon",
]
