[package]
name = "mpc-net"
version = "0.4.0"
edition.workspace = true


[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = "0.3.30"
quinn = { version = "0.11", optional = true }
rcgen = "0.13"
rustls = "0.23.15"
serde = { workspace = true }
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "io-util",
    "macros",
], optional = true }
tokio-util = { version = "0.7.10", features = ["codec"], optional = true }
toml = "0.8.13"
tracing = { workspace = true }
ark-serialize = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
bytesize = { workspace = true }
rayon = { version = "1.10.0", optional = true }


mpc-types = { path = "../../co-snarks/mpc-types" }

mpi = { version = "0.7.0", features = [
    "user-operations",
    "derive",
], optional = true }


[features]
default = ["quic"]
mpi = ["dep:mpi"]
quic = ["dep:quinn", "dep:tokio", "dep:tokio-util"]
parallel = ["dep:rayon"]

