[package]
name = "mpc-types"
version = "0.1.0"
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
num-traits = { version = "0.2.18", default-features = false }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
snarks-core = { path = "../snarks-core" }

[dev-dependencies]
ark-bn254 = { workspace = true }

