[package]
name = "noir-r1cs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "noir-r1cs"
path = "src/cli/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
itertools.workspace = true
ruint.workspace = true
rand.workspace = true
hex.workspace = true
postcard.workspace = true
zstd.workspace = true
bytes.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
num-bigint.workspace = true
rayon = { version = "1.10.0" }


# Noir lang
acir.workspace = true
# acvm.workspace = true
acir_field.workspace = true
noirc_artifacts.workspace = true
noirc_abi.workspace = true
# noirc_printable_type.workspace = true
# bn254_blackbox_solver.workspace = true


# Binary 
# See <https://github.com/rust-lang/cargo/issues/1982>
argh.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
