[package]
name = "noir-r1cs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "noir-r1cs"
path = "src/cli/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
itertools.workspace = true
rand.workspace = true
hex.workspace = true
postcard.workspace = true
zstd.workspace = true
bytes.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
num-bigint.workspace = true
rayon = { version = "1.10.0" }


# Noir lang: make sure it matches installed version `noirup -C ceaa1986628197bd1170147f6a07f0f98d21030a`
# Note: to simplify things, pick a version that has the same `ark_ff` version as `whir`.
acir = { git = "https://github.com/noir-lang/noir", rev = "ceaa1986628197bd1170147f6a07f0f98d21030a" }
acvm = { git = "https://github.com/noir-lang/noir", rev = "ceaa1986628197bd1170147f6a07f0f98d21030a" }
acir_field = { git = "https://github.com/noir-lang/noir", rev = "ceaa1986628197bd1170147f6a07f0f98d21030a" }
noirc_abi = { git = "https://github.com/noir-lang/noir", rev = "ceaa1986628197bd1170147f6a07f0f98d21030a" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", rev = "ceaa1986628197bd1170147f6a07f0f98d21030a" }
noirc_printable_type = { git = "https://github.com/noir-lang/noir", rev = "ceaa1986628197bd1170147f6a07f0f98d21030a" }


# Binary 
# See <https://github.com/rust-lang/cargo/issues/1982>
argh.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
