[package]
name = "spartan"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
# Arkworks dependencies
ark-linear-sumcheck.workspace = true
ark-poly-commit.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-ec.workspace = true
ark-crypto-primitives.workspace = true
merlin.workspace = true

# Standard dependencies
serde.workspace = true
rand.workspace = true
itertools.workspace = true
anyhow.workspace = true
tracing.workspace = true
rayon = { version = "1.8.0", optional = true }
bytesize = "2.0.1"

noir-r1cs = { path = "../noir-r1cs" }
snarks-core = { path = "../../snarks-core" }


[features]
default = ["std", "parallel"]
std = [
    "ark-ff/std",
    "ark-poly/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-poly-commit/std",
]
#print-trace = [ "ark-std/print-trace" ]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-poly-commit/parallel",
    "rayon",
]
