[package]
name = "fibonacci-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
# jolt = { package = "jolt-sdk", path = "../../../../../jolt/jolt-sdk" }
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt.git", rev = "42de0ca1f581dd212dda7ff44feee806556531d2" }

